--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 "
                             >
 
-                            Mulheres, cis ou trans, que sejam estudantes, pesquisadoras e profissionais da área de Computação do estado de Minas Gerais
+                            Mulheres, inclusive as mulheres trans, que sejam estudantes, pesquisadoras e profissionais da área de Computação do estado de Minas Gerais
                             </p>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                             >
 
                             <strong>Data:</strong> 28 de novembro de 2025
-                            <br><strong>Horário:</strong> 8h às 18h
+                            <br><strong>Horário:</strong> 8h às 17h
                             </p>
                             </div>
                         </div>
@@ -267,13 +267,13 @@
                             <h3 data-aos="fade-up">Apoio:</h3>
                             <div class="row justify-content-center" style="margin-top: 30px;">
                                 <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
-                                    <img src="assets/img/logoInstituicoes/logoUFV.png" alt="Apoio 1" class="img-fluid" style="max-height: 150px;">
+                                    <img src="assets/img/logoInstituicoes/logoPUCMinas.png" alt="Apoio 3" class="img-fluid" style="max-height: 150px;">
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
                                     <img src="assets/img/logoInstituicoes/logoUFOP.png" alt="Apoio 2" class="img-fluid" style="max-height: 150px;">
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
-                                    <img src="assets/img/logoInstituicoes/logoPUCMinas.png" alt="Apoio 3" class="img-fluid" style="max-height: 150px;">
+                                    <img src="assets/img/logoInstituicoes/logoUFV.png" alt="Apoio 1" class="img-fluid" style="max-height: 150px;">
                                 </div>
                             </div>
                         </div>
