Update link for the template.

--- a/callForPapers.html
+++ b/callForPapers.html
@@ -176,7 +176,7 @@
                   Os trabalhos poderão ser escritos em Português ou Inglês.
                 </p>
                 <p style="text-align: justify;">
-                  Os trabalhos deverão ser submetidos em formato PDF na forma de pôster, conforme o modelo disponível em:  <a href="https://docs.google.com/presentation/d/1nFfYnezgfmqZGRRzSjwmBvv-Jk3FACr7/edit?usp=drive_link&ouid=105719058493585159441&rtpof=true&sd=true" target="_blank">pôster</a>. 
+                  Os trabalhos deverão ser submetidos em formato PDF na forma de pôster, conforme o modelo:  <a href="assets/docs/Poster-Template-EMMComp2025.pptx" target="_blank">pôster</a>. 
                  </p>
                 <p style="text-align: justify;">
                   A submissão deverá ser realizada eletronicamente em <a href="https://jems3.sbc.org.br/emmcomp2025" target="_blank">JEMS</a>.
