--- a/index.html
+++ b/index.html
@@ -264,22 +264,46 @@
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-lg-12 pt-5 pt-lg-0">
-                            <h3 data-aos="fade-up">Apoio:</h3>
+                            <h3 data-aos="fade-up">Colaboração:</h3>
                             <div class="row justify-content-center" style="margin-top: 30px;">
                                 <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
-                                    <img src="assets/img/logoInstituicoes/logoPUCMinas.png" alt="Apoio 3" class="img-fluid" style="max-height: 150px;">
+                                    <img src="assets/img/logoInstituicoes/logoPUCMinas.png" alt="Colab 1" class="img-fluid" style="max-height: 150px;">
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
-                                    <img src="assets/img/logoInstituicoes/logoUFOP.png" alt="Apoio 2" class="img-fluid" style="max-height: 150px;">
+                                    <img src="assets/img/logoInstituicoes/logoUFOP.png" alt="Colab 2" class="img-fluid" style="max-height: 150px;">
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
-                                    <img src="assets/img/logoInstituicoes/logoUFV.png" alt="Apoio 1" class="img-fluid" style="max-height: 150px;">
+                                    <img src="assets/img/logoInstituicoes/logoUFV.png" alt="Colab 3" class="img-fluid" style="max-height: 150px;">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+            <section class="about">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-lg-12 pt-5 pt-lg-0">
+                            <h3 data-aos="fade-up">Apoio:</h3>
+                            <div class="row justify-content-center" style="margin-top: 30px;">
+                                <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
+                                    <img src="assets/img/logoInstituicoes/Logo_SBC_Transparente.jpeg" alt="Apoio 1" class="img-fluid" style="max-height: 150px;">
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
+                                    <img src="assets/img/logoInstituicoes/prodabel.jpg" alt="Apoio 2" class="img-fluid" style="max-height: 150px;">
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-6 text-center" style="margin-bottom: 20px;">
+                                    <img src="assets/img/logoInstituicoes/BHTEC-Marca-tradicional-1.png" alt="Apoio 3" class="img-fluid" style="max-height: 150px;">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+            
             <!-- End About Section -->
              
         </main>
