Update Michelle foto

--- a/organization.html
+++ b/organization.html
@@ -251,7 +251,7 @@
 
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                             <div class="member">
-                                <img src="assets/img/team/MichelleHanne-PUCMinas.jpg" class="img-fluid" alt="Avatar">
+                                <img src="assets/img/team/MichelleHanne-PUCMinas.jpeg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Michelle Hanne Soares de Andrade</h4>
@@ -312,9 +312,6 @@
                 </div>
             </section>
 
-            <!-- <div style="text-align: center; font-size: 12px; margin-bottom: 20px;">
-                Crédito da imagem: <a href='https://pt.pngtree.com/freepng/female-user-vector-avatar-icon_4005060.html'>pngtree.com</a>
-            </div> -->
         </main>
 
         <!-- ======= Footer ======= -->
