Update info about registration.

--- a/attending.html
+++ b/attending.html
@@ -130,9 +130,24 @@
                 <p>Inscrições</p>
                 </div>
 
-                <div class="row">
-                <h1 class="d-flex justify-content-center">A ser anunciado</h1>
-                </div>
+          <div class="row" style="justify-content: center;">
+          <div class="container_center">
+            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
+              <div class="">
+                <br>
+                <p style="text-align: justify;">
+                  As incrições serão abertas a partir de 20 de outubro de 2025. O link das inscrições será informado nesta página.
+                <p style="text-align: justify;">
+                  As inscrições serão <b>gratuitas</b>. O evento é voltado para meninas e mulheres, inclusive as trans, da área de Computação.
+                </p>
+                <p style="text-align: justify;">
+                  <b>As vagas são limitadas.</b> 
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
             </div>
             </section><!-- End Services Section -->
         </main><!-- End #main -->
