Update in the description.

--- a/callForPapers.html
+++ b/callForPapers.html
@@ -85,7 +85,7 @@
                 <h3 style="color: #4e4039;"><b>Tipos de Trabalhos</b></h3>
                 <br>
                 <p style="text-align: justify;">
-                  A Mostra de Produção Técnico-Científica Feminina Mineira em Computação do Encontro Mineiro de Mulheres na Computação apresentará trabalhos realizados por mulheres, incluindo mulheres trans, na área de Computação e que tenham sido realizados em qualquer instituição de ensino técnico e superior de Minas Gerais
+                  A Mostra de Produção Técnico-Científica Feminina Mineira em Computação - do Encontro Mineiro de Mulheres na Computação - apresentará trabalhos realizados por mulheres, incluindo mulheres trans, na área de Computação, em qualquer instituição de ensino técnico e superior de Minas Gerais
                 </p>
                 <p style="text-align: justify;">
                   São aceitos trabalhos nas seguintes categorias: doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso e projetos de extensão.
